preparing buddget service so would respond correctly and cleaning unused code